# met_projects

./: .gitignore  TODO.md  cli.py  connector.py  grapher.py  index.html  package.json  pnpm-lock.yaml  structurer.py
25-thesis-vns/: .gitignore  README.md  pyproject.toml
ArkadiiSemenov5833PZ01-front-end-ecommerce/: db.json  package.json  tailwind.config.js
CS100 PZ01/: .gitignore  README.md  cli.py  connector.py  grapher.py  main.py  structurer.py
CS322-PZ01/: ArkadiiSemenov5833PZ01.csproj  ArkadiiSemenov5833PZ01.sln  Makefile  Program.cs  appsettings.Development.json  appsettings.json
CS490/: .gitignore  Makefile  README.md  pyproject.toml
CS490/.github/: python.instructions.md
CS490/checkpoints/: v0_ninasr_b0.pt  v10_ninasr_b0.pt  v20_ninasr_b0.pt  v25_ninasr_b0.pt  v27_ninasr_b0.pt  v28_ninasr_b0.pt  v30_ninasr_b0.pt
CS490/src/v1/: ninasr.py
CS490/src/v1/s1_data_collection/: quick-copy-image.js
CS490/src/v1/s2_data_generation/: data_gen.py  degradation.py
CS490/src/v1/s3_training/: dataset.py  fine_tune_ninasr_b0.py  show_model.py
CS490/src/v1/s4_inference/: run_model.py  utils.py
CS490/src/v2/: data_gen_real.py  data_gen_synthetic.py  dataset.py  image_utils.py  ninasr.py  run_fine_tune.py  run_model.py
CS490/src/v3/: data_gen_real.py  image_utils.py  ninasr.py  run_fine_tune.py  run_model.py
IT354-PZ01/: README.md  index.html  package.json  pnpm-lock.yaml
IT355-PZ01/: Dockerfile  docker-compose.yml  pom.xml
IT355-PZ02/: docker-compose.yml
IT382-PZ01/: .gitignore  docker-compose.yml
SE310-PZ01/: .gitignore  Components.cs  Program.cs  (+2 more)
(+409 files in other folders)
